added events list fetching
