# app/Http/Controllers/API/LocationController.php
@@ -3,34 +3,34 @@
 namespace App\Http\Controllers\API;
 
 use App\Http\Controllers\Controller;
-use App\Http\Resources\LocationResource;
+use App\Http\Resources\EventResource;
 use App\Models\Category;
-use Illuminate\Http\Request;
+use App\Models\Event;
 
 class LocationController extends Controller
 {
     /**
     * @OA\Get(
-    *      path="/api/v2/category/{category_id}/locations",
-    *      tags={"Locations"},
-    *      summary="Get locations",
-    *      description="Get list of locations",
+    *      path="/api/v2/location/{location_id}/events",
+    *      tags={"Location"},
+    *      summary="Get events of location",
+    *      description="Get events of location",
     *      @OA\Parameter(
-    *          description="Category id to search for locations",
+    *          description="Location id",
     *          in="path",
-    *          name="category_id",
+    *          name="location_id",
     *          required=true,
     *          @OA\Schema(type="string"),
-    *          @OA\Examples(example="int", value="1", summary="1"),
+    *          @OA\Examples(example="int", value="2", summary="2"),
     *      ),
     *      @OA\Response(
     *          response=200,
     *          description="Response Message",
-    *       ),
-    *     )
+    *      ),
+    *  )
     */
-    public function locations($category_id){
-        $categories = Category::where('parent_id', $category_id)->select('title_tk','title_ru','id','parent_id')->sub()->get();
-        return LocationResource::collection($categories)->additional(['success' => true]);
+    public function locationEvents($location_id){
+        $events = Event::with(['ticket_dates','venue:id,venue_name_tk,venue_name_ru,address'])->where('sub_category_id', $location_id)->paginate(10);
+        return EventResource::collection($events)->additional(['success' => true]);
     }
 }
